@@ -181,10 +181,16 @@ class CWidget extends CBaseController
 		else
 			$extension='.php';
 		if(strpos($viewName,'.')) // a path alias
-			$viewFile=Yii::getPathOfAlias($viewName).$extension;
+			$viewFile=Yii::getPathOfAlias($viewName);
 		else
-			$viewFile=$this->getViewPath().DIRECTORY_SEPARATOR.$viewName.$extension;
-		return is_file($viewFile) ? Yii::app()->findLocalizedFile($viewFile) : false;
+			$viewFile=$this->getViewPath().DIRECTORY_SEPARATOR.$viewName;
+
+		if(is_file($viewFile.$extension))
+			return Yii::app()->findLocalizedFile($viewFile.$extension);
+		else if($extension!=='.php' && is_file($viewFile.'.php'))
+			return Yii::app()->findLocalizedFile($viewFile.'.php');
+		else
+			return false;
 	}
 
 	/**
